Fix Nav width Remove Feature Nav Collapsable

--- a/src/DonateTo.WebApplication/ClientApp/src/app/shared/containers/layout/admin-layout/admin-layout.component.less
+++ b/src/DonateTo.WebApplication/ClientApp/src/app/shared/containers/layout/admin-layout/admin-layout.component.less
@@ -17,6 +17,11 @@ a {
   height: 100%;
 }
 
+.side-nav {
+  width: 250px !important;
+  min-width: 250px !important;
+}
+
 .main-layout-content {
   padding: 1.5em;
 }
